WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215952
[macOS] AirPlay device name is wrong when playing to multiple devices
https://bugs.webkit.org/show_bug.cgi?id=215952
Summary
[macOS] AirPlay device name is wrong when playing to multiple devices
Eric Carlson
Reported
2020-08-28 15:37:42 PDT
AVPlayer.outputContext.deviceName doesn't return the correct name when playing to multiple devices.
Attachments
Patch
(2.15 KB, patch)
2020-08-28 15:44 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch
(2.76 KB, patch)
2020-08-28 15:50 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2020-08-28 15:38:15 PDT
<
rdar://problem/66930799
>
Eric Carlson
Comment 2
2020-08-28 15:44:09 PDT
Created
attachment 407509
[details]
Patch
Eric Carlson
Comment 3
2020-08-28 15:50:43 PDT
Created
attachment 407510
[details]
Patch
EWS
Comment 4
2020-08-28 16:21:42 PDT
Committed
r266312
: <
https://trac.webkit.org/changeset/266312
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 407510
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug