[macOS] AirPlay device name is wrong when playing to multiple devices https://bugs.webkit.org/show_bug.cgi?id=215952 <rdar://problem/66930799>

Reviewed by Jer Noble.

Tested manually because this requires a specific hardware setup.

* platform/graphics/avfoundation/MediaPlaybackTargetCocoa.mm:
(WebCore::MediaPlaybackTargetCocoa::deviceName const): If the AVOutputContext
supports multiple output devices, create the device name by concatenating the names
of all of the active output devices.


Canonical link: https://commits.webkit.org/228751@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266312 268f45cc-cd09-0410-ab3c-d52691b4dbfc